# quine-mccluskey

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  quine-mccluskey.cabal  shell.nix
nix/: clean.nix  default.nix  overlay.nix  sources.json
src/: Covering.hs  PI.hs  QM.hs  Solver.hs
src/Data/: QM.hs
src/Data/QM/: Covering.hs
