cabal-version: 2.4

name:
  quine-mccluskey
version:
  0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:
  MIT
license-file:
  LICENSE
author:
  nprindle
maintainer:
  nprindle18@gmail.com
-- copyright:
category:
  Data
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    MyLib
  other-modules:
  -- other-extensions:
  build-depends:
    , base ^>=4.13.0.0
    , monad-loops
    , mtl
    , transformers
    , containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

test-suite quine-mccluskey-test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    MyLibTest.hs
  build-depends:
    base ^>=4.13.0.0
  ghc-options:
    -Wall
    -O2
